apps/radarr/deployment-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - image: linuxserver/radarr:6.4.4
          name: radarr
          resources:
            requests:
              memory: 166Mi
          ports:
            - containerPort: 7878
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: radarr
            - mountPath: /data
              name: library
            - mountPath: /data/Backup
              name: library
              subPath: "arr/radarr/backup"
      hostname: radarr
      restartPolicy: Always
      volumes:
        - name: radarr
          persistentVolumeClaim:
            claimName: radarr
        - name: library
          persistentVolumeClaim:
            claimName: plex-library
