apps/radarr/service-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  ports:
    - name: "7878"
      port: 7878
      targetPort: 7878
  selector:
    app: radarr
