apps/radarr/ingress-radarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: plex
spec:
  ingressClassName: cilium
  rules:
  - host: radarr.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              number: 7878
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - radarr.almothana.xyz
      secretName: almothana-xyz-tls
